<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/cardview"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/corners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        >

        <ImageView
            android:id="@+id/image_view"
            android:background="@drawable/corners"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Creator Name"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Likes: " />
    </LinearLayout>

</layout>